Implement surv_param_sim_resample

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,5 @@ export(calc_km_pi)
 export(plot_hr_pi)
 export(plot_km_pi)
 export(surv_param_sim)
+export(surv_param_sim_resample)
 importFrom(magrittr,"%>%")
