--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ S3method(summary,survparamsim.kmpi)
 export("%>%")
 export(calc_hr_pi)
 export(calc_km_pi)
+export(extract_hr)
+export(extract_sim)
 export(plot_hr_pi)
 export(plot_km_pi)
 export(surv_param_sim)
