--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,10 @@ export("%>%")
 export(calc_hr_pi)
 export(calc_km_pi)
 export(extract_hr)
+export(extract_hr_pi)
+export(extract_km_obs)
+export(extract_km_pi)
+export(extract_median_surv)
 export(extract_sim)
 export(plot_hr_pi)
 export(plot_km_pi)
