--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,8 @@ Suggests:
     testthat (>= 2.1.0),
     vdiffr,
     knitr,
-    rmarkdown
+    rmarkdown,
+    survminer
 RoxygenNote: 6.1.1
 Language: en-US
 URL: https://github.com/yoshidk6/survParamSim
