--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: survParamSim
 Type: Package
 Title: Parametric Survival Simulation with Parameter Uncertainty
-Version: 0.0.0020
+Version: 0.1.0
 Authors@R: c(
     person("Kenta", "Yoshida", , "6.kurabupasu@gmail.com", c("aut", "cre"), 
       comment = c(ORCID = "0000-0003-4967-3831")),
     person("Laurent", "Claret", , , c("aut")))
 Description: Perform survival simulation with parametric survival model generated from 'survreg' function in 'survival' package.
-    Outputs include prediction intervals of Kaplan-Meier estimates and hazard ratio of treatment effect.
     In each simulation coefficients are resampled from variance-covariance matrix of parameter estimates to 
     capture uncertainty in model parameters.
+    Prediction intervals of Kaplan-Meier estimates and hazard ratio of treatment effect can be further calculated using simulated survival data.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
@@ -32,7 +32,7 @@ Suggests:
     knitr,
     rmarkdown,
     survminer
-RoxygenNote: 7.0.0
+RoxygenNote: 7.0.2
 Language: en-US
 URL: https://github.com/yoshidk6/survParamSim
 BugReports: https://github.com/yoshidk6/survParamSim/issues
