--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,6 +32,7 @@ Suggests:
     knitr,
     rmarkdown,
     survminer
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
 Language: en-US
 URL: https://github.com/yoshidk6/survParamSim
