Deprecate `extract_median_surv` rather than changing definition and supecede with `extract_medsurv_pi`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,9 @@ export(extract_hr_pi)
 export(extract_km_obs)
 export(extract_km_pi)
 export(extract_median_surv)
-export(extract_median_surv_delta_pi)
-export(extract_median_surv_pi)
+export(extract_medsurv)
+export(extract_medsurv_delta_pi)
+export(extract_medsurv_pi)
 export(extract_sim)
 export(plot_hr_pi)
 export(plot_km_pi)
