--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,4 +21,5 @@ export(plot_hr_pi)
 export(plot_km_pi)
 export(surv_param_sim)
 export(surv_param_sim_resample)
+importFrom(lifecycle,deprecate_soft)
 importFrom(magrittr,"%>%")
