--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: survParamSim
 Type: Package
 Title: Parametric Survival Simulation with Parameter Uncertainty
-Version: 0.1.4.9001
+Version: 0.1.4.9002
 Authors@R: c(
     person("Kenta", "Yoshida", , "6.kurabupasu@gmail.com", c("aut", "cre"), 
       comment = c(ORCID = "0000-0003-4967-3831")),
@@ -15,6 +15,7 @@ Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.4.0),
 Imports: 
+    broom,
     dplyr,
     forcats,
     ggplot2,
