Update document and globalVariables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(extract_km_obs)
 export(extract_km_pi)
 export(extract_median_surv)
 export(extract_medsurv)
+export(extract_medsurv_delta)
 export(extract_medsurv_delta_pi)
 export(extract_medsurv_pi)
 export(extract_sim)
