--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Parametric Survival Simulation with Parameter Uncertainty
 Version: 0.1.5
 Authors@R: c(
-    person("Kenta", "Yoshida", , "6.kurabupasu@gmail.com", c("aut", "cre"), 
+    person("Kenta", "Yoshida", , "yoshida.kenta.6@gmail.com", c("aut", "cre"), 
       comment = c(ORCID = "0000-0003-4967-3831")),
     person("Laurent", "Claret", , , c("aut")))
 Description: Perform survival simulation with parametric survival model generated from 'survreg' function in 'survival' package.
