--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -10,7 +10,9 @@ reference:
 - title: "Step 2: Generate K-M and/or HR"
   desc: >
     Calculate Kaplan-Meier estimates (with median survival time) and/or
-    hazard ratios
+    hazard ratios. You can either use methods based on the simulated survival times
+    (`calc_hr_pi()` and `calc_km_pi()`) or based on the average survival & PDF functions
+    per treatment groups (`calc_ave_hr_pi()` and `calc_ave_km_pi()`)
 - contents:
   - starts_with("calc_")
 
