Implement calc_ave_km_pi()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ S3method(summary,survparamsim.hrpi)
 S3method(summary,survparamsim.kmpi)
 export("%>%")
 export(calc_ave_hr_pi)
+export(calc_ave_km_pi)
+export(calc_hr_pi)
 export(calc_km_pi)
 export(extract_hr)
 export(extract_hr_pi)
