--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,9 +31,10 @@ Suggests:
     knitr,
     rmarkdown,
     survminer,
-    testthat (>= 3.0.0),
+    testthat (>= 3.1.0),
     vdiffr,
-    withr
+    withr,
+    flexsurv
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Language: en-US
