--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ Depends: R (>= 3.4.0),
 Imports: 
     broom,
     dplyr,
+    eha,
     forcats,
     ggplot2,
     lifecycle (>= 0.2.0),
@@ -34,7 +35,7 @@ Suggests:
     testthat (>= 3.1.0),
     vdiffr,
     withr,
-    flexsurv
+    flexsurv (>= 2.2),
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Language: en-US
