--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,8 @@ Suggests:
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Language: en-US
-URL: https://github.com/yoshidk6/survParamSim
+URL: https://github.com/yoshidk6/survParamSim,
+    https://yoshidk6.github.io/survParamSim/
 BugReports: https://github.com/yoshidk6/survParamSim/issues
 VignetteBuilder: knitr
 RdMacros: lifecycle
