--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,22 +1,19 @@
+url: https://yoshidk6.github.io/survParamSim/
+template:
+  bootstrap: 5
 reference:
-- title: "Step 1: Perform simulation"
-  desc: >
+- title: 'Step 1: Perform simulation'
+  desc: |
     Perform simulation using a survival model and a provided dataset
 - contents:
   - surv_param_sim
   - surv_param_sim_resample
   - surv_param_sim_pre_resampled
-
-- title: "Step 2: Generate K-M and/or HR"
-  desc: >
-    Calculate Kaplan-Meier estimates (with median survival time) and/or
-    hazard ratios. You can either use methods based on the simulated survival times
-    (`calc_hr_pi()` and `calc_km_pi()`) or based on the average survival & PDF functions
-    per treatment groups (`calc_ave_hr_pi()` and `calc_ave_km_pi()`)
-- contents:
-  - starts_with("calc_")
-
-- title: "Step 3: Extract K-M/HR or generate plots"
+- title: 'Step 2: Generate K-M and/or HR'
+  desc: |
+    Calculate Kaplan-Meier estimates (with median survival time) and/or hazard ratios. You can either use methods based on the simulated survival times (`calc_hr_pi()` and `calc_km_pi()`) or based on the average survival & PDF functions per treatment groups (`calc_ave_hr_pi()` and `calc_ave_km_pi()`)
+- contents: starts_with("calc_")
+- title: 'Step 3: Extract K-M/HR or generate plots'
 - contents:
   - starts_with("plot_")
   - extract_hr_pi
@@ -28,13 +25,11 @@ reference:
   - extract_km_obs
   - extract_medsurv
   - extract_medsurv_delta
-
 - title: S3 methods
   contents:
   - starts_with("print")
   - starts_with("summary")
-
 - title: Superseded
   desc: Superseded functions no longer needed
-  contents:
-  - extract_median_surv
+  contents: extract_median_surv
+
